app/src/assets/style/base.css
:root {
  font-family: var(--fonts);
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;

  --card-background: rgb(40,40,40);
  --card-input: rgb(88, 166, 255, 0.04);
  --card-input-border: rgb(88, 166, 255, 0.12);
  --card-input-border-hover: rgb(88, 166, 255, 0.24);
  --card-button: rgb(88, 166, 255, 0.08);
  --card-button-hover: rgb(88, 166, 255, 0.16);
  --card-button-text: rgb(88, 166, 255, 0.87);
  --card--element: rgb(50,50,50);
  --aside-background: rgba(88, 166, 255, 0.02);
  --card-border: rgba(255, 255, 255, 0.12);
  --card-border-hover: rgba(255, 255, 255, 0.24);
  --card-shadow: rgba(0, 0, 0, 0.12);
  --card-shadow-hover: rgba(0, 0, 0, 0.24);
  --card-text: rgba(255, 255, 255, 0.87);
  --card-text-hover: rgba(255, 255, 255, 1);
  --card-text-secondary: rgba(255, 255, 255, 0.54);
  --fonts: "Source Sans Pro", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  --fonts-code: JetBrains Mono, monospace, "Source Sans Pro", Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
}

* {
  outline: none;
}

a {
  font-weight: 500;
  text-decoration: inherit;
}

html, body, main, #app {
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
  outline: 0;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.md-editor.md-editor-previewOnly {
  --md-bk-color: none !important;
}

.md-editor-dark {
  --md-color: #eee !important;
}

.md-editor-preview-wrapper {
  padding: 0 !important;
}

.default-theme code {
  background-color: var(--md-theme-code-block-bg-color) !important;
  color: var(--card-text) !important;
  margin: 0 3px !important;
  font-family: var(--fonts-code) !important;
}

.default-theme pre code {
  color: var(--md-theme-code-block-color) !important;
  margin: 0 !important;
}

@media (prefers-color-scheme: light) {

}

